Add farm profile (1/2)

--- a/src/Eccube/Resource/doctrine/Eccube.Entity.Customer.dcm.yml
+++ b/src/Eccube/Resource/doctrine/Eccube.Entity.Customer.dcm.yml
@@ -42,6 +42,10 @@ Eccube\Entity\Customer:
         name02:
             type: text
             nullable: true
+        profile_image:
+            type: string
+            length: 100
+            nullable: true
         kana01:
             type: text
             nullable: true
