Fix layout at the customer admin page + add name jp column

--- a/src/Eccube/Resource/doctrine/master/Eccube.Entity.Master.CustomerRole.dcm.yml
+++ b/src/Eccube/Resource/doctrine/master/Eccube.Entity.Master.CustomerRole.dcm.yml
@@ -12,6 +12,10 @@ Eccube\Entity\Master\CustomerRole:
         name:
             type: text
             nullable: true
+        name_jp:
+            type: string
+            length: 100
+            nullable: true
         rank:
             type: smallint
             nullable: false
