Add farm profile cover function

--- a/src/Eccube/Resource/doctrine/Eccube.Entity.Customer.dcm.yml
+++ b/src/Eccube/Resource/doctrine/Eccube.Entity.Customer.dcm.yml
@@ -200,4 +200,9 @@ Eccube\Entity\Customer:
         Orders:
             targetEntity: Eccube\Entity\Order
             mappedBy: Customer
+        CustomerImage:
+            targetEntity: Eccube\Entity\CustomerImage
+            mappedBy: Customer
+            orderBy:
+                id: ASC
     lifecycleCallbacks: {  }
