--- a/src/Eccube/Resource/doctrine/Eccube.Entity.Product.dcm.yml
+++ b/src/Eccube/Resource/doctrine/Eccube.Entity.Product.dcm.yml
@@ -50,10 +50,10 @@ Eccube\Entity\Product:
             nullable: false
     manyToOne:
         Creator:
-            targetEntity: Eccube\Entity\Member
+            targetEntity: Eccube\Entity\Customer
             joinColumn:
                 name: creator_id
-                referencedColumnName: member_id
+                referencedColumnName: customer_id
                 nullable: false
         Status:
             targetEntity: Eccube\Entity\Master\Disp
