Add home selling function

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ composer.phar
 /html/install.php
 !/html/plugin/.gitkeep
 /html/install/temp/*
-/html/upload/save_image/*
+#/html/upload/save_image/*
 !/html/upload/save_image/.gitkeep
 /html/upload/temp_image/*
 !/html/upload/temp_image/.gitkeep
