Add order status

--- a/src/Eccube/Resource/doctrine/Eccube.Entity.Order.dcm.yml
+++ b/src/Eccube/Resource/doctrine/Eccube.Entity.Order.dcm.yml
@@ -168,6 +168,9 @@ Eccube\Entity\Order:
         payment_date:
             type: datetime
             nullable: true
+        receiptable_date:
+            type: datetime
+            nullable: true
         del_flg:
             type: smallint
             nullable: false
