--- a/src/Eccube/Resource/doctrine/Eccube.Entity.RouteSchedule.dcm.yml
+++ b/src/Eccube/Resource/doctrine/Eccube.Entity.RouteSchedule.dcm.yml
@@ -13,7 +13,7 @@ Eccube\Entity\RouteSchedule:
                 strategy: AUTO
     fields:
         date:
-            type: datetime
+            type: text
             nullable: true
         schedule_status:
             type: text
