--- a/src/Eccube/Resource/doctrine/Eccube.Entity.Bus.dcm.yml
+++ b/src/Eccube/Resource/doctrine/Eccube.Entity.Bus.dcm.yml
@@ -21,17 +21,15 @@ Eccube\Entity\Bus:
         update_date:
             type: datetime
             nullable: false
-#        del_flg:
-#            type: smallint
-#            nullable: false
-#            unsigned: false
-#            options:
-#                default: '0'
     manyToOne:
         Customer:
             targetEntity: Eccube\Entity\Customer
-            inversedBy: Children
             joinColumn:
                 name: customer_id
                 referencedColumnName: customer_id
+        Route:
+            targetEntity: Eccube\Entity\Master\Route
+            joinColumn:
+                name: route_id
+                referencedColumnName: id
     lifecycleCallbacks: {  }
