Hot fix create new item

--- a/src/Eccube/Resource/doctrine/Eccube.Entity.Product.dcm.yml
+++ b/src/Eccube/Resource/doctrine/Eccube.Entity.Product.dcm.yml
@@ -88,9 +88,9 @@ Eccube\Entity\Product:
     oneToOne:
         ProductRate:
             targetEntity: Eccube\Entity\ProductRate
-            inversedBy: Product
+            mappedBy: Product
             joinColumn:
                 name: product_id
                 referencedColumnName: product_id
-                nullable: false
+                nullable: true
     lifecycleCallbacks: {  }
