Add receiver home (recommend) (3/4)

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ composer.phar
 !/app/config/eccube/.gitkeep
 /app/log/*
 !/app/log/.gitkeep
-/app/Plugin/*
+#/app/Plugin/*
 !/app/Plugin/.gitkeep
 /app/template/*
 !/app/template/admin
