--- a/src/Eccube/Resource/doctrine/Eccube.Entity.Customer.dcm.yml
+++ b/src/Eccube/Resource/doctrine/Eccube.Entity.Customer.dcm.yml
@@ -205,4 +205,7 @@ Eccube\Entity\Customer:
             mappedBy: Customer
             orderBy:
                 id: ASC
+        Follows:
+            targetEntity: Eccube\Entity\Follow
+            mappedBy: Customer
     lifecycleCallbacks: {  }
